--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "veebiprojekt",
+  "name": "taltech8",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,9 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^18.16.3",
+    "axios": "^1.4.0",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "moment": "^2.29.4",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
